# coug_active_fgo

./: .pre-commit-config.yaml  README.md  dependencies.repos
.github/workflows/: ros2_build_and_test.yml
coug_active_fgo/: CMakeLists.txt  critics.xml  package.xml
coug_active_fgo/config/: coug_active_fgo_params.yaml
coug_active_fgo/include/coug_active_fgo/: belief_state_critic.hpp  belief_state_monitor.hpp  waypoint_nav2.hpp
coug_active_fgo/launch/: coug_active_fgo.launch.py  coug_active_fgo_viz.launch.py  demo.launch.py
coug_active_fgo/params/: belief_state_monitor_params.yaml  waypoint_nav2_params.yaml
coug_active_fgo/plotjuggler/: plotjuggler.xml.template
coug_active_fgo/rviz/: rviz_config.rviz.template
coug_active_fgo/src/: belief_state_critic.cpp  belief_state_monitor.cpp  belief_state_monitor_node.cpp  waypoint_nav2.cpp  waypoint_nav2_node.cpp
demo/: Dockerfile.demo  cleanup.yaml  docker-compose.yaml
demo/demo_ros2_bag/: metadata.yaml
evals/: plot_bags.sh  trace_plot.py
